1999-05-14  Jacob Berkman  <jberk+@cmu.edu>

	* gui/gdmlogin.c (gdm_parse_enriched_string): added support
	for processor type for Welcome text
	* docs/gdm-manual.txt: added entry for %m

1999-05-09    <mkp@mkp.net>

	* daemon/server.c (gdm_server_restart): Workaround for the
 	annoying gnome-name-server bug.

	* Misc. fixes.

1999-04-19  Martin Kasper Petersen  <mkp@mkp.net>

	* Created gdm2 branch. Most of the daemon code has been revamped,
 	gdmgreeter development suspended and gdmlogin written from
 	scratch. Face browser functionality will return eventually.
	
	* gui/gdmlogin.c (gdm_parse_enriched_string): Applied patch from
 	Jacob Berkman to support sysname and release variable expansion.

1999-03-28  Martin Kasper Petersen  <mkp@mkp.net>

	* gui/gdmgreeter.c (gdm_greeter_user_alloc): Icon size bug
 	reported by Clifford Wright.

1999-03-07  Martin Kasper Petersen  <mkp@mkp.net>

	* configure.in, src/Makefile.am: Pass -DGDM_CONFIG_PATH to
 	compiler to avoid ${prefix}/blah bug in Owen's patch.

1999-03-06  Martin Kasper Petersen  <mkp@mkp.net>

	* src/gdmgreeter.c (gdm_greeter_user_alloc): Fixed a memory
 	corruption bug (Reported by Gregory McLean <gregm@comstar.net>).

1999-03-05  Martin Kasper Petersen  <mkp@mkp.net>

	* gdm.spec: Fix spec file.

	* Misc fixes.

1999-03-03  Martin Kasper Petersen  <mkp@mkp.net>
	
	* config/Makefile.am, configure.in: Patch from Owen.

	* po/de.po: Added (Patch from Karsten Weiss
 	<karsten@addx.au.s.shuttle.de>).

1999-02-26  Martin Kasper Petersen  <mkp@mkp.net>

	* src/gdmgreeter.c (main): Force completion mode on for the time
 	being. I'll implement a real PAM conversation function within the
 	next couple of days to take care of the exposed usernames issue.

1999-02-25  Martin Kasper Petersen  <mkp@mkp.net>

	* src/gdmchooser.c: Done!
	
	* src/gdmchooser.c: First shot at reimplementing the code I
 	lost. Doesn't actually work yet.	

1999-02-24  Martin Kasper Petersen  <mkp@mkp.net>
