@@ -17,9 +17,8 @@ gdmchooser_SOURCES = \
 	gdmchooser.h 
 
 gdmlogin_SOURCES = \
-	gdmlogin.c \
-	filecheck.c
+	gdmlogin.c 
 
 gdmchooser_LDADD = $(GNOME_LIBDIR) $(GNOME_LIBS) $(GNOMEUI_LIBS) -lXdmcp -lX11 $(INTLLIBS)
-gdmlogin_LDADD = $(GNOME_LIBDIR) $(GNOME_LIBS) $(GNOMEUI_LIBS) $(INTLLIBS)
+gdmlogin_LDADD = ../daemon/filecheck.o $(GNOME_LIBDIR) $(GNOME_LIBS) $(GNOMEUI_LIBS) $(INTLLIBS)
 
