@@ -1,3 +1,14 @@
+1999-06-30    <mkp@mkp.net>
+
+	* daemon/xdmcp.c (gdm_xdmcp_handle_forward_query): First shot at
+ 	implementing FORWARD_QUERY. gdm supports being chosen from remote
+ 	hosts now, but still doesn't provide chooser functionality itself.
+
+1999-06-29    <mkp@mkp.net>
+
+	* daemon/verify.c (gdm_verify_user): Transfer PAM environment to
+ 	user session (Suggested by nalin@thermo.stat.ncsu.edu)
+
 1999-05-14  Jacob Berkman  <jberk+@cmu.edu>
 
 	* gui/gdmlogin.c (gdm_parse_enriched_string): added support
